se agrega funcion para generar factura de prueba
